# vision-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
tests/: test_vision.py
tools/: browser_session.py  diff.py  dom.py  pdf.py  record.py  screenshot.py  window.py
