[project]
name = "opencode-mcp"
version = "0.1.0"
description = "Vision MCP server for OpenCode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
